kustomize/adguard-home/adguard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app: adguard-home
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: adguard
    app.kubernetes.io/managed-by: flux
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    description: "Service for AdGuard Home adblocking solution."
spec:
  selector:
    app: adguard-home
  ports:
  - name: web-admin
    protocol: TCP
    port: 3000
    targetPort: 3000
  - name: web-interface
    protocol: TCP
    port: 80
    targetPort: 80
  - name: dns-udp
    protocol: UDP
    port: 32367
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 32367
    targetPort: 53
  type: LoadBalancer
  externalTrafficPolicy: Local
